parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DISTINTOQUE
    FALSE
    FLOAT
    MAYORIGUAL
    MENORIGUAL
    TRUE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print_statement
Rule 5     instruccion -> while_statement
Rule 6     instruccion -> if_statement
Rule 7     instruccion -> if_else_statement
Rule 8     instruccion -> assign_statement
Rule 9     instruccion -> for_statement
Rule 10    instruccion -> declare_function
Rule 11    instruccion -> call_function
Rule 12    print_statement -> PRINT PARENTESIS_A expression PARENTESIS_C
Rule 13    for_statement -> FOR PARENTESIS_A ID IGUAL expression TO expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
Rule 14    while_statement -> WHILE PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
Rule 15    if_statement -> IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
Rule 16    if_else_statement -> IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C ELSE LLAVE_A instrucciones LLAVE_C
Rule 17    assign_statement -> ID IGUAL expression
Rule 18    declare_function -> FUNCTION ID PARENTESIS_A parametros PARENTESIS_C LLAVE_A instrucciones LLAVE_C
Rule 19    parametros -> ID
Rule 20    parametros -> ID COMA parametros
Rule 21    parametros -> empty
Rule 22    call_function -> ID PARENTESIS_A argumentos PARENTESIS_C
Rule 23    argumentos -> expression
Rule 24    argumentos -> expression COMA argumentos
Rule 25    expression -> NUMBER
Rule 26    expression -> STRING
Rule 27    expression -> BOOLEAN
Rule 28    expression -> binary_op
Rule 29    expression -> variable
Rule 30    expression -> logical_op
Rule 31    elementos -> expression
Rule 32    elementos -> elementos COMA expression
Rule 33    variable -> ID
Rule 34    assign_statement -> ID IGUAL CORCHETE_A elementos CORCHETE_C
Rule 35    expression -> ID CORCHETE_A expression CORCHETE_C
Rule 36    expression -> ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
Rule 37    expression -> ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
Rule 38    binary_op -> expression SUMA expression
Rule 39    binary_op -> expression RESTA expression
Rule 40    binary_op -> expression MULTIPLICACION expression
Rule 41    binary_op -> expression DIVISION expression
Rule 42    binary_op -> expression MENORQUE expression
Rule 43    binary_op -> expression MAYORQUE expression
Rule 44    binary_op -> expression IGUALQUE expression
Rule 45    binary_op -> expression MODULO expression
Rule 46    logical_op -> expression AND expression
Rule 47    logical_op -> expression OR expression
Rule 48    logical_op -> NOT expression
Rule 49    instruccion -> ID MASIGUAL
Rule 50    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 36
AND                  : 46
BOOLEAN              : 27
COMA                 : 20 24 32
CORCHETE_A           : 34 35
CORCHETE_C           : 34 35
DISTINTOQUE          : 
DIVISION             : 41
ELSE                 : 16
FALSE                : 
FLOAT                : 
FOR                  : 13
FUNCTION             : 18
ID                   : 13 17 18 19 20 22 33 34 35 36 37 49
IF                   : 15 16
IGUAL                : 13 17 34
IGUALQUE             : 44
LLAVE_A              : 13 14 15 16 16 18
LLAVE_C              : 13 14 15 16 16 18
MASIGUAL             : 49
MAYORIGUAL           : 
MAYORQUE             : 43
MENORIGUAL           : 
MENORQUE             : 42
MODULO               : 45
MULTIPLICACION       : 40
NOT                  : 48
NUMBER               : 25
OR                   : 47
PARENTESIS_A         : 12 13 14 15 16 18 22 36 37
PARENTESIS_C         : 12 13 14 15 16 18 22 36 37
PRINT                : 12
PUNTO                : 36 37
REMOVE               : 37
RESTA                : 39
STRING               : 26
SUMA                 : 38
TO                   : 13
TRUE                 : 
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

argumentos           : 22 24
assign_statement     : 8
binary_op            : 28
call_function        : 11
declare_function     : 10
elementos            : 32 34
empty                : 21
expression           : 12 13 13 14 15 16 17 23 24 31 32 35 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48
for_statement        : 9
if_else_statement    : 7
if_statement         : 6
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 13 14 15 16 16 18
logical_op           : 30
parametros           : 18 20
print_statement      : 4
variable             : 29
while_statement      : 5

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print_statement
    (5) instruccion -> . while_statement
    (6) instruccion -> . if_statement
    (7) instruccion -> . if_else_statement
    (8) instruccion -> . assign_statement
    (9) instruccion -> . for_statement
    (10) instruccion -> . declare_function
    (11) instruccion -> . call_function
    (49) instruccion -> . ID MASIGUAL
    (12) print_statement -> . PRINT PARENTESIS_A expression PARENTESIS_C
    (14) while_statement -> . WHILE PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (15) if_statement -> . IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (16) if_else_statement -> . IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C ELSE LLAVE_A instrucciones LLAVE_C
    (17) assign_statement -> . ID IGUAL expression
    (34) assign_statement -> . ID IGUAL CORCHETE_A elementos CORCHETE_C
    (13) for_statement -> . FOR PARENTESIS_A ID IGUAL expression TO expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (18) declare_function -> . FUNCTION ID PARENTESIS_A parametros PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (22) call_function -> . ID PARENTESIS_A argumentos PARENTESIS_C

    ID              shift and go to state 12
    PRINT           shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    FUNCTION        shift and go to state 17

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print_statement                shift and go to state 4
    while_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    if_else_statement              shift and go to state 7
    assign_statement               shift and go to state 8
    for_statement                  shift and go to state 9
    declare_function               shift and go to state 10
    call_function                  shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print_statement
    (5) instruccion -> . while_statement
    (6) instruccion -> . if_statement
    (7) instruccion -> . if_else_statement
    (8) instruccion -> . assign_statement
    (9) instruccion -> . for_statement
    (10) instruccion -> . declare_function
    (11) instruccion -> . call_function
    (49) instruccion -> . ID MASIGUAL
    (12) print_statement -> . PRINT PARENTESIS_A expression PARENTESIS_C
    (14) while_statement -> . WHILE PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (15) if_statement -> . IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (16) if_else_statement -> . IF PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C ELSE LLAVE_A instrucciones LLAVE_C
    (17) assign_statement -> . ID IGUAL expression
    (34) assign_statement -> . ID IGUAL CORCHETE_A elementos CORCHETE_C
    (13) for_statement -> . FOR PARENTESIS_A ID IGUAL expression TO expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (18) declare_function -> . FUNCTION ID PARENTESIS_A parametros PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (22) call_function -> . ID PARENTESIS_A argumentos PARENTESIS_C

    $end            reduce using rule 1 (init -> instrucciones .)
    ID              shift and go to state 12
    PRINT           shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    FUNCTION        shift and go to state 17

    instruccion                    shift and go to state 18
    print_statement                shift and go to state 4
    while_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    if_else_statement              shift and go to state 7
    assign_statement               shift and go to state 8
    for_statement                  shift and go to state 9
    declare_function               shift and go to state 10
    call_function                  shift and go to state 11

state 3

    (3) instrucciones -> instruccion .

    ID              reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVE_C         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print_statement .

    ID              reduce using rule 4 (instruccion -> print_statement .)
    PRINT           reduce using rule 4 (instruccion -> print_statement .)
    WHILE           reduce using rule 4 (instruccion -> print_statement .)
    IF              reduce using rule 4 (instruccion -> print_statement .)
    FOR             reduce using rule 4 (instruccion -> print_statement .)
    FUNCTION        reduce using rule 4 (instruccion -> print_statement .)
    $end            reduce using rule 4 (instruccion -> print_statement .)
    LLAVE_C         reduce using rule 4 (instruccion -> print_statement .)


state 5

    (5) instruccion -> while_statement .

    ID              reduce using rule 5 (instruccion -> while_statement .)
    PRINT           reduce using rule 5 (instruccion -> while_statement .)
    WHILE           reduce using rule 5 (instruccion -> while_statement .)
    IF              reduce using rule 5 (instruccion -> while_statement .)
    FOR             reduce using rule 5 (instruccion -> while_statement .)
    FUNCTION        reduce using rule 5 (instruccion -> while_statement .)
    $end            reduce using rule 5 (instruccion -> while_statement .)
    LLAVE_C         reduce using rule 5 (instruccion -> while_statement .)


state 6

    (6) instruccion -> if_statement .

    ID              reduce using rule 6 (instruccion -> if_statement .)
    PRINT           reduce using rule 6 (instruccion -> if_statement .)
    WHILE           reduce using rule 6 (instruccion -> if_statement .)
    IF              reduce using rule 6 (instruccion -> if_statement .)
    FOR             reduce using rule 6 (instruccion -> if_statement .)
    FUNCTION        reduce using rule 6 (instruccion -> if_statement .)
    $end            reduce using rule 6 (instruccion -> if_statement .)
    LLAVE_C         reduce using rule 6 (instruccion -> if_statement .)


state 7

    (7) instruccion -> if_else_statement .

    ID              reduce using rule 7 (instruccion -> if_else_statement .)
    PRINT           reduce using rule 7 (instruccion -> if_else_statement .)
    WHILE           reduce using rule 7 (instruccion -> if_else_statement .)
    IF              reduce using rule 7 (instruccion -> if_else_statement .)
    FOR             reduce using rule 7 (instruccion -> if_else_statement .)
    FUNCTION        reduce using rule 7 (instruccion -> if_else_statement .)
    $end            reduce using rule 7 (instruccion -> if_else_statement .)
    LLAVE_C         reduce using rule 7 (instruccion -> if_else_statement .)


state 8

    (8) instruccion -> assign_statement .

    ID              reduce using rule 8 (instruccion -> assign_statement .)
    PRINT           reduce using rule 8 (instruccion -> assign_statement .)
    WHILE           reduce using rule 8 (instruccion -> assign_statement .)
    IF              reduce using rule 8 (instruccion -> assign_statement .)
    FOR             reduce using rule 8 (instruccion -> assign_statement .)
    FUNCTION        reduce using rule 8 (instruccion -> assign_statement .)
    $end            reduce using rule 8 (instruccion -> assign_statement .)
    LLAVE_C         reduce using rule 8 (instruccion -> assign_statement .)


state 9

    (9) instruccion -> for_statement .

    ID              reduce using rule 9 (instruccion -> for_statement .)
    PRINT           reduce using rule 9 (instruccion -> for_statement .)
    WHILE           reduce using rule 9 (instruccion -> for_statement .)
    IF              reduce using rule 9 (instruccion -> for_statement .)
    FOR             reduce using rule 9 (instruccion -> for_statement .)
    FUNCTION        reduce using rule 9 (instruccion -> for_statement .)
    $end            reduce using rule 9 (instruccion -> for_statement .)
    LLAVE_C         reduce using rule 9 (instruccion -> for_statement .)


state 10

    (10) instruccion -> declare_function .

    ID              reduce using rule 10 (instruccion -> declare_function .)
    PRINT           reduce using rule 10 (instruccion -> declare_function .)
    WHILE           reduce using rule 10 (instruccion -> declare_function .)
    IF              reduce using rule 10 (instruccion -> declare_function .)
    FOR             reduce using rule 10 (instruccion -> declare_function .)
    FUNCTION        reduce using rule 10 (instruccion -> declare_function .)
    $end            reduce using rule 10 (instruccion -> declare_function .)
    LLAVE_C         reduce using rule 10 (instruccion -> declare_function .)


state 11

    (11) instruccion -> call_function .

    ID              reduce using rule 11 (instruccion -> call_function .)
    PRINT           reduce using rule 11 (instruccion -> call_function .)
    WHILE           reduce using rule 11 (instruccion -> call_function .)
    IF              reduce using rule 11 (instruccion -> call_function .)
    FOR             reduce using rule 11 (instruccion -> call_function .)
    FUNCTION        reduce using rule 11 (instruccion -> call_function .)
    $end            reduce using rule 11 (instruccion -> call_function .)
    LLAVE_C         reduce using rule 11 (instruccion -> call_function .)


state 12

    (49) instruccion -> ID . MASIGUAL
    (17) assign_statement -> ID . IGUAL expression
    (34) assign_statement -> ID . IGUAL CORCHETE_A elementos CORCHETE_C
    (22) call_function -> ID . PARENTESIS_A argumentos PARENTESIS_C

    MASIGUAL        shift and go to state 19
    IGUAL           shift and go to state 20
    PARENTESIS_A    shift and go to state 21


state 13

    (12) print_statement -> PRINT . PARENTESIS_A expression PARENTESIS_C

    PARENTESIS_A    shift and go to state 22


state 14

    (14) while_statement -> WHILE . PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C

    PARENTESIS_A    shift and go to state 23


state 15

    (15) if_statement -> IF . PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (16) if_else_statement -> IF . PARENTESIS_A expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C ELSE LLAVE_A instrucciones LLAVE_C

    PARENTESIS_A    shift and go to state 24


state 16

    (13) for_statement -> FOR . PARENTESIS_A ID IGUAL expression TO expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C

    PARENTESIS_A    shift and go to state 25


state 17

    (18) declare_function -> FUNCTION . ID PARENTESIS_A parametros PARENTESIS_C LLAVE_A instrucciones LLAVE_C

    ID              shift and go to state 26


state 18

    (2) instrucciones -> instrucciones instruccion .

    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVE_C         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 19

    (49) instruccion -> ID MASIGUAL .

    ID              reduce using rule 49 (instruccion -> ID MASIGUAL .)
    PRINT           reduce using rule 49 (instruccion -> ID MASIGUAL .)
    WHILE           reduce using rule 49 (instruccion -> ID MASIGUAL .)
    IF              reduce using rule 49 (instruccion -> ID MASIGUAL .)
    FOR             reduce using rule 49 (instruccion -> ID MASIGUAL .)
    FUNCTION        reduce using rule 49 (instruccion -> ID MASIGUAL .)
    $end            reduce using rule 49 (instruccion -> ID MASIGUAL .)
    LLAVE_C         reduce using rule 49 (instruccion -> ID MASIGUAL .)


state 20

    (17) assign_statement -> ID IGUAL . expression
    (34) assign_statement -> ID IGUAL . CORCHETE_A elementos CORCHETE_C
    (25) expression -> . NUMBER
    (26) expression -> . STRING
    (27) expression -> . BOOLEAN
    (28) expression -> . binary_op
    (29) expression -> . variable
    (30) expression -> . logical_op
    (35) expression -> . ID CORCHETE_A expression CORCHETE_C
    (36) expression -> . ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> . ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (38) binary_op -> . expression SUMA expression
    (39) binary_op -> . expression RESTA expression
    (40) binary_op -> . expression MULTIPLICACION expression
    (41) binary_op -> . expression DIVISION expression
    (42) binary_op -> . expression MENORQUE expression
    (43) binary_op -> . expression MAYORQUE expression
    (44) binary_op -> . expression IGUALQUE expression
    (45) binary_op -> . expression MODULO expression
    (33) variable -> . ID
    (46) logical_op -> . expression AND expression
    (47) logical_op -> . expression OR expression
    (48) logical_op -> . NOT expression

    CORCHETE_A      shift and go to state 29
    NUMBER          shift and go to state 30
    STRING          shift and go to state 31
    BOOLEAN         shift and go to state 32
    ID              shift and go to state 27
    NOT             shift and go to state 36

    expression                     shift and go to state 28
    binary_op                      shift and go to state 33
    variable                       shift and go to state 34
    logical_op                     shift and go to state 35

state 21

    (22) call_function -> ID PARENTESIS_A . argumentos PARENTESIS_C
    (23) argumentos -> . expression
    (24) argumentos -> . expression COMA argumentos
    (25) expression -> . NUMBER
    (26) expression -> . STRING
    (27) expression -> . BOOLEAN
    (28) expression -> . binary_op
    (29) expression -> . variable
    (30) expression -> . logical_op
    (35) expression -> . ID CORCHETE_A expression CORCHETE_C
    (36) expression -> . ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> . ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (38) binary_op -> . expression SUMA expression
    (39) binary_op -> . expression RESTA expression
    (40) binary_op -> . expression MULTIPLICACION expression
    (41) binary_op -> . expression DIVISION expression
    (42) binary_op -> . expression MENORQUE expression
    (43) binary_op -> . expression MAYORQUE expression
    (44) binary_op -> . expression IGUALQUE expression
    (45) binary_op -> . expression MODULO expression
    (33) variable -> . ID
    (46) logical_op -> . expression AND expression
    (47) logical_op -> . expression OR expression
    (48) logical_op -> . NOT expression

    NUMBER          shift and go to state 30
    STRING          shift and go to state 31
    BOOLEAN         shift and go to state 32
    ID              shift and go to state 27
    NOT             shift and go to state 36

    argumentos                     shift and go to state 37
    expression                     shift and go to state 38
    binary_op                      shift and go to state 33
    variable                       shift and go to state 34
    logical_op                     shift and go to state 35

state 22

    (12) print_statement -> PRINT PARENTESIS_A . expression PARENTESIS_C
    (25) expression -> . NUMBER
    (26) expression -> . STRING
    (27) expression -> . BOOLEAN
    (28) expression -> . binary_op
    (29) expression -> . variable
    (30) expression -> . logical_op
    (35) expression -> . ID CORCHETE_A expression CORCHETE_C
    (36) expression -> . ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> . ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (38) binary_op -> . expression SUMA expression
    (39) binary_op -> . expression RESTA expression
    (40) binary_op -> . expression MULTIPLICACION expression
    (41) binary_op -> . expression DIVISION expression
    (42) binary_op -> . expression MENORQUE expression
    (43) binary_op -> . expression MAYORQUE expression
    (44) binary_op -> . expression IGUALQUE expression
    (45) binary_op -> . expression MODULO expression
    (33) variable -> . ID
    (46) logical_op -> . expression AND expression
    (47) logical_op -> . expression OR expression
    (48) logical_op -> . NOT expression

    NUMBER          shift and go to state 30
    STRING          shift and go to state 31
    BOOLEAN         shift and go to state 32
    ID              shift and go to state 27
    NOT             shift and go to state 36

    expression                     shift and go to state 39
    binary_op                      shift and go to state 33
    variable                       shift and go to state 34
    logical_op                     shift and go to state 35

state 23

    (14) while_statement -> WHILE PARENTESIS_A . expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (25) expression -> . NUMBER
    (26) expression -> . STRING
    (27) expression -> . BOOLEAN
    (28) expression -> . binary_op
    (29) expression -> . variable
    (30) expression -> . logical_op
    (35) expression -> . ID CORCHETE_A expression CORCHETE_C
    (36) expression -> . ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> . ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (38) binary_op -> . expression SUMA expression
    (39) binary_op -> . expression RESTA expression
    (40) binary_op -> . expression MULTIPLICACION expression
    (41) binary_op -> . expression DIVISION expression
    (42) binary_op -> . expression MENORQUE expression
    (43) binary_op -> . expression MAYORQUE expression
    (44) binary_op -> . expression IGUALQUE expression
    (45) binary_op -> . expression MODULO expression
    (33) variable -> . ID
    (46) logical_op -> . expression AND expression
    (47) logical_op -> . expression OR expression
    (48) logical_op -> . NOT expression

    NUMBER          shift and go to state 30
    STRING          shift and go to state 31
    BOOLEAN         shift and go to state 32
    ID              shift and go to state 27
    NOT             shift and go to state 36

    expression                     shift and go to state 40
    binary_op                      shift and go to state 33
    variable                       shift and go to state 34
    logical_op                     shift and go to state 35

state 24

    (15) if_statement -> IF PARENTESIS_A . expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C
    (16) if_else_statement -> IF PARENTESIS_A . expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C ELSE LLAVE_A instrucciones LLAVE_C
    (25) expression -> . NUMBER
    (26) expression -> . STRING
    (27) expression -> . BOOLEAN
    (28) expression -> . binary_op
    (29) expression -> . variable
    (30) expression -> . logical_op
    (35) expression -> . ID CORCHETE_A expression CORCHETE_C
    (36) expression -> . ID PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> . ID PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (38) binary_op -> . expression SUMA expression
    (39) binary_op -> . expression RESTA expression
    (40) binary_op -> . expression MULTIPLICACION expression
    (41) binary_op -> . expression DIVISION expression
    (42) binary_op -> . expression MENORQUE expression
    (43) binary_op -> . expression MAYORQUE expression
    (44) binary_op -> . expression IGUALQUE expression
    (45) binary_op -> . expression MODULO expression
    (33) variable -> . ID
    (46) logical_op -> . expression AND expression
    (47) logical_op -> . expression OR expression
    (48) logical_op -> . NOT expression

    NUMBER          shift and go to state 30
    STRING          shift and go to state 31
    BOOLEAN         shift and go to state 32
    ID              shift and go to state 27
    NOT             shift and go to state 36

    expression                     shift and go to state 41
    binary_op                      shift and go to state 33
    variable                       shift and go to state 34
    logical_op                     shift and go to state 35

state 25

    (13) for_statement -> FOR PARENTESIS_A . ID IGUAL expression TO expression PARENTESIS_C LLAVE_A instrucciones LLAVE_C

    ID              shift and go to state 42


state 26

    (18) declare_function -> FUNCTION ID . PARENTESIS_A parametros PARENTESIS_C LLAVE_A instrucciones LLAVE_C

    PARENTESIS_A    shift and go to state 43


state 27

    (35) expression -> ID . CORCHETE_A expression CORCHETE_C
    (36) expression -> ID . PUNTO ADD PARENTESIS_A expression PARENTESIS_C
    (37) expression -> ID . PUNTO REMOVE PARENTESIS_A expression PARENTESIS_C
    (33) variable -> ID .
